--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -171,7 +171,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;PX_PHYSX_STATIC_LIB;GLEW_STATIC;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>src;src/vendor;$(SolutionDir)glfw-3.3.4\include;$(SolutionDir)glew\include;$(SolutionDir)PhysX\pxshared\include;$(SolutionDir)PhysX\physx\include;$(SolutionDir)PhysX\pxshared\include\foundation;</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp14</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -245,7 +245,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;PX_PHYSX_STATIC_LIB;GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>src;src/vendor;$(SolutionDir)glfw-3.3.4\include;$(SolutionDir)glew\include;$(SolutionDir)PhysX\pxshared\include;$(SolutionDir)PhysX\physx\include;$(SolutionDir)PhysX\pxshared\include\foundation;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp14</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <ShowIncludes>true</ShowIncludes>
     </ClCompile>
     <Link>
@@ -481,9 +481,10 @@
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\Package.h" />
     <ClInclude Include="src\package\Package.h" />
-    <ClInclude Include="src\package\subPackage\SubPackage.h" />
-    <ClInclude Include="src\package\subPackage\SubPackageId.h" />
-    <ClInclude Include="src\package\subPackage\SubPackageLoader.h" />
+    <ClInclude Include="src\package\PackageLoader.h" />
+    <ClInclude Include="src\package\modules\PackageModule.h" />
+    <ClInclude Include="src\package\modules\PackageModuleId.h" />
+    <ClInclude Include="src\package\modules\PackageModuleLoader.h" />
     <ClInclude Include="src\physics\PhysicsManager.h" />
     <ClInclude Include="src\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
