Add File Util class

--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -479,6 +479,7 @@
     <ClInclude Include="src\chunk\ChunkManager.fwd.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
+    <ClInclude Include="src\FileUtilities.h" />
     <ClInclude Include="src\Package.h" />
     <ClInclude Include="src\package\Package.h" />
     <ClInclude Include="src\package\PackageLoader.h" />
