--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -317,6 +317,8 @@
     <ClCompile Include="src\chunk\block\BaseBlock.cpp" />
     <ClCompile Include="SRC\CHUNK\Chunk.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
+    <ClCompile Include="src\FileUtilities.cpp" />
+    <ClCompile Include="src\package\modules\PackageModuleId.cpp" />
     <ClCompile Include="src\package\PackageLoader.cpp" />
     <ClCompile Include="src\physics\PhysicsManager.cpp" />
     <ClCompile Include="src\rendering\Material.cpp" />
@@ -482,6 +484,7 @@
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\FileUtilities.h" />
     <ClInclude Include="src\Logger.h" />
+    <ClInclude Include="src\package\modules\BlockModuleLoader.h" />
     <ClInclude Include="src\package\Package.h" />
     <ClInclude Include="src\package\PackageLoader.h" />
     <ClInclude Include="src\package\modules\PackageModule.h" />
