--- a/PixelExplorer/PixelExplorer.vcxproj.filters
+++ b/PixelExplorer/PixelExplorer.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClCompile Include="src\FileUtilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\chunk\block\Block.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\chunk\block\BlockDefinition.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -1404,12 +1401,15 @@
     <ClInclude Include="src\chunk\block\BlockShape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\chunk\block\BlockDefinition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\textures\textures.png">
+    <Image Include="assets\textures\textures.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="res\textures\default.png">
+    <Image Include="assets\textures\default.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
