--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -319,10 +319,12 @@
     <ClCompile Include="src\chunk\block\BlockShape.cpp" />
     <ClCompile Include="SRC\CHUNK\Chunk.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
+    <ClCompile Include="src\DataBuffer.cpp" />
+    <ClCompile Include="src\Direction.cpp" />
     <ClCompile Include="src\FileUtilities.cpp" />
+    <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\physics\PhysicsManager.cpp" />
     <ClCompile Include="src\rendering\Material.cpp" />
-    <ClCompile Include="src\rendering\Renderable.cpp" />
     <ClCompile Include="src\rendering\Renderer.cpp" />
     <ClCompile Include="src\rendering\Shader.cpp" />
     <ClCompile Include="src\rendering\TestRenderable.cpp" />
@@ -485,6 +487,8 @@
     <ClInclude Include="src\chunk\ChunkManager.fwd.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
+    <ClInclude Include="src\DataBuffer.h" />
+    <ClInclude Include="src\Direction.h" />
     <ClInclude Include="src\FileUtilities.h" />
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\physics\PhysicsManager.h" />
