--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -320,6 +320,7 @@
     <ClCompile Include="src\chunk\block\BlockShape.cpp" />
     <ClCompile Include="SRC\CHUNK\Chunk.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
+    <ClCompile Include="src\chunk\ChunkRenderMesh.cpp" />
     <ClCompile Include="src\DataBuffer.cpp" />
     <ClCompile Include="src\Direction.cpp" />
     <ClCompile Include="src\FileUtilities.cpp" />
@@ -487,6 +488,7 @@
     <ClInclude Include="src\chunk\Chunk.h" />
     <ClInclude Include="src\chunk\ChunkManager.fwd.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
+    <ClInclude Include="src\chunk\ChunkRenderMesh.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\DataBuffer.h" />
     <ClInclude Include="src\Direction.h" />
