--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -314,7 +314,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\chunk\block-old\BaseBlock.cpp" />
     <ClCompile Include="src\chunk\block\Block.cpp" />
     <ClCompile Include="src\chunk\block\BlockDefinition.cpp" />
     <ClCompile Include="src\chunk\block\BlockShape.cpp" />
@@ -325,6 +324,7 @@
     <ClCompile Include="src\Direction.cpp" />
     <ClCompile Include="src\FileUtilities.cpp" />
     <ClCompile Include="src\Logger.cpp" />
+    <ClCompile Include="src\physics\PhysicsBase.cpp" />
     <ClCompile Include="src\physics\PhysicsManager.cpp" />
     <ClCompile Include="src\rendering\Material.cpp" />
     <ClCompile Include="src\rendering\Renderer.cpp" />
@@ -476,11 +476,6 @@
     <None Include="src\vendor\glm\gtx\wrap.inl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\chunk\block-old\Block.h" />
-    <ClInclude Include="src\chunk\block-old\BlockData.h" />
-    <ClInclude Include="src\chunk\block-old\ChunkBlock.h" />
-    <ClInclude Include="src\chunk\block-old\BlockFace.h" />
-    <ClInclude Include="src\chunk\block-old\BaseBlock.h" />
     <ClInclude Include="src\chunk\block\Block.h" />
     <ClInclude Include="src\chunk\block\BlockDefinition.h" />
     <ClInclude Include="src\chunk\block\BlockShape.h" />
@@ -493,7 +488,9 @@
     <ClInclude Include="src\DataBuffer.h" />
     <ClInclude Include="src\Direction.h" />
     <ClInclude Include="src\FileUtilities.h" />
+    <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Logger.h" />
+    <ClInclude Include="src\physics\PhysicsBase.h" />
     <ClInclude Include="src\physics\PhysicsManager.h" />
     <ClInclude Include="src\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
