--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -314,19 +314,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\chunk\block\Block.cpp" />
-    <ClCompile Include="src\chunk\block\BlockDefinition.cpp" />
-    <ClCompile Include="src\chunk\block\BlockShape.cpp" />
-    <ClCompile Include="SRC\CHUNK\Chunk.cpp" />
-    <ClCompile Include="src\chunk\ChunkManager.cpp" />
-    <ClCompile Include="src\chunk\ChunkRenderMesh.cpp" />
-    <ClInclude Include="src\DataBuffer.inl">
+    <ClCompile Include="src\game\world\chunk\block\Block.cpp" />
+    <ClCompile Include="src\game\world\chunk\block\BlockDefinition.cpp" />
+    <ClCompile Include="src\game\world\chunk\block\BlockShape.cpp" />
+    <ClCompile Include="src\game\world\chunk\Chunk.cpp" />
+    <ClCompile Include="src\game\world\chunk\ChunkManager.cpp" />
+    <ClCompile Include="src\game\world\chunk\ChunkRenderMesh.cpp" />
+    <ClInclude Include="src\util\DataBuffer.inl">
       <FileType>Document</FileType>
     </ClInclude>
-    <ClCompile Include="src\Direction.cpp" />
-    <ClCompile Include="src\FileUtilities.cpp" />
-    <ClCompile Include="src\Game.cpp" />
-    <ClCompile Include="src\Logger.cpp" />
+    <ClCompile Include="src\util\Direction.cpp" />
+    <ClCompile Include="src\util\FileUtilities.cpp" />
+    <ClCompile Include="src\game\Game.cpp" />
+    <ClCompile Include="src\common\Logger.cpp" />
     <ClCompile Include="src\physics\PhysicsBase.cpp" />
     <ClCompile Include="src\physics\PhysicsScene.cpp" />
     <ClCompile Include="src\physics\StaticPhysicsObject.cpp" />
@@ -337,7 +337,7 @@
     <ClCompile Include="src\rendering\TexturedMaterial.cpp" />
     <ClCompile Include="src\vendor\glm\detail\glm.cpp" />
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
-    <ClCompile Include="src\World.cpp" />
+    <ClCompile Include="src\game\world\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Chunk.shader" />
@@ -480,27 +480,27 @@
     <None Include="src\vendor\glm\gtx\wrap.inl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\chunk\block\Block.h" />
-    <ClInclude Include="src\chunk\block\BlockDefinition.h" />
-    <ClInclude Include="src\chunk\block\BlockShape.h" />
-    <ClInclude Include="src\chunk\Chunk.fwd.h" />
-    <ClInclude Include="src\chunk\Chunk.h" />
-    <ClInclude Include="src\chunk\ChunkManager.fwd.h" />
-    <ClInclude Include="src\chunk\ChunkManager.h" />
-    <ClInclude Include="src\chunk\ChunkRenderMesh.h" />
+    <ClInclude Include="src\game\world\chunk\block\Block.h" />
+    <ClInclude Include="src\game\world\chunk\block\BlockDefinition.h" />
+    <ClInclude Include="src\game\world\chunk\block\BlockShape.h" />
+    <ClInclude Include="src\game\world\chunk\Chunk.fwd.h" />
+    <ClInclude Include="src\game\world\chunk\Chunk.h" />
+    <ClInclude Include="src\game\world\chunk\ChunkManager.fwd.h" />
+    <ClInclude Include="src\game\world\chunk\ChunkManager.h" />
+    <ClInclude Include="src\game\world\chunk\ChunkRenderMesh.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
-    <ClInclude Include="src\DataBuffer.h" />
-    <ClInclude Include="src\Direction.h" />
-    <ClInclude Include="src\FileUtilities.h" />
-    <ClInclude Include="src\Game.h" />
-    <ClInclude Include="src\Logger.h" />
+    <ClInclude Include="src\util\DataBuffer.h" />
+    <ClInclude Include="src\util\Direction.h" />
+    <ClInclude Include="src\util\FileUtilities.h" />
+    <ClInclude Include="src\game\Game.h" />
+    <ClInclude Include="src\common\Logger.h" />
     <ClInclude Include="src\physics\PhysicsBase.fwd.h" />
     <ClInclude Include="src\physics\PhysicsBase.h" />
     <ClInclude Include="src\physics\PhysicsScene.fwd.h" />
     <ClInclude Include="src\physics\PhysicsScene.h" />
     <ClInclude Include="src\physics\StaticPhysicsObject.fwd.h" />
     <ClInclude Include="src\physics\StaticPhysicsObject.h" />
-    <ClInclude Include="src\RefCounted.h" />
+    <ClInclude Include="src\common\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
     <ClInclude Include="src\rendering\Renderable.h" />
     <ClInclude Include="src\rendering\Renderer.h" />
@@ -791,7 +791,7 @@
     <ClInclude Include="src\vendor\glm\vec4.hpp" />
     <ClInclude Include="src\vendor\glm\vector_relational.hpp" />
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
-    <ClInclude Include="src\World.h" />
+    <ClInclude Include="src\game\world\World.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\default.png" />
