--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -318,11 +318,14 @@
     <ClCompile Include="src\game\world\chunk\block\BlockDefinition.cpp" />
     <ClCompile Include="src\game\world\chunk\block\BlockShape.cpp" />
     <ClCompile Include="src\game\world\chunk\Chunk.cpp" />
-    <ClCompile Include="src\game\world\chunk\ChunkManager.cpp" />
     <ClCompile Include="src\game\world\chunk\ChunkRenderMesh.cpp" />
+    <ClInclude Include="src\game\world\World.fwd.h" />
+    <ClInclude Include="src\game\world\WorldScene.fwd.h" />
+    <ClInclude Include="src\game\world\WorldScene.h" />
     <ClInclude Include="src\util\DataBuffer.inl">
       <FileType>Document</FileType>
     </ClInclude>
+    <ClCompile Include="src\game\world\WorldScene.cpp" />
     <ClCompile Include="src\util\Direction.cpp" />
     <ClCompile Include="src\util\FileUtilities.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
@@ -485,8 +488,6 @@
     <ClInclude Include="src\game\world\chunk\block\BlockShape.h" />
     <ClInclude Include="src\game\world\chunk\Chunk.fwd.h" />
     <ClInclude Include="src\game\world\chunk\Chunk.h" />
-    <ClInclude Include="src\game\world\chunk\ChunkManager.fwd.h" />
-    <ClInclude Include="src\game\world\chunk\ChunkManager.h" />
     <ClInclude Include="src\game\world\chunk\ChunkRenderMesh.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\util\DataBuffer.h" />
