--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -322,6 +322,7 @@
     <ClInclude Include="src\game\world\World.fwd.h" />
     <ClInclude Include="src\game\world\WorldScene.fwd.h" />
     <ClInclude Include="src\game\world\WorldScene.h" />
+    <ClInclude Include="src\physics\PhysicsObject.h" />
     <ClInclude Include="src\rendering\BasicMaterial.h" />
     <ClInclude Include="src\util\DataBuffer.inl">
       <FileType>Document</FileType>
@@ -497,11 +498,8 @@
     <ClInclude Include="src\util\FileUtilities.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\Logger.h" />
-    <ClInclude Include="src\physics\PhysicsBase.fwd.h" />
     <ClInclude Include="src\physics\PhysicsBase.h" />
-    <ClInclude Include="src\physics\PhysicsScene.fwd.h" />
     <ClInclude Include="src\physics\PhysicsScene.h" />
-    <ClInclude Include="src\physics\StaticPhysicsObject.fwd.h" />
     <ClInclude Include="src\physics\StaticPhysicsObject.h" />
     <ClInclude Include="src\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
