--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -324,6 +324,8 @@
     <ClInclude Include="src\game\world\WorldScene.h" />
     <ClInclude Include="src\physics\PhysicsObject.h" />
     <ClInclude Include="src\rendering\BasicMaterial.h" />
+    <ClInclude Include="src\rendering\Renderer.fwd.h" />
+    <ClInclude Include="src\rendering\Shader.fwd.h" />
     <ClInclude Include="src\util\DataBuffer.inl">
       <FileType>Document</FileType>
     </ClInclude>
