--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -135,9 +135,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Logger.h" />
+    <ClInclude Include="src\RefCount.h" />
+    <ClInclude Include="src\rendering\RenderWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Logger.inl" />
+    <None Include="src\RefCount.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
